--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -3,7 +3,7 @@
     <button class="btn btn-info" data-toggle="modal" data-target="#modalPublicaciones">Añadir</button>
   </div>
   <br>
-  <div *ngFor="let publicacion of publicacionService.publicaciones; let i=index" class="row">
+  <div *ngFor="let publicacion of publicacionService.publicaciones | paginate: {itemsPerPage: 10, currentPage: pageActual}; let i=index" class="row">
       <div class="card col-10 offset-1 imgs" >
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
@@ -45,4 +45,5 @@
         </div>
       </div>
   </div>
+  <pagination-controls (pageChange)="pageActual = $event"></pagination-controls>
     
