--- a/Angular/src/app/shared/settings/settings.component.html
+++ b/Angular/src/app/shared/settings/settings.component.html
@@ -89,7 +89,7 @@
                         </li>
                     </ul>
                 </div>
-                <h3 class="themeoptions-heading">
+                <h3 *ngIf="flag === true " class="themeoptions-heading">
                     <div>Sidebar Options</div>
                     <button type="button" class="btn-pill btn-shadow btn-wide ml-auto btn btn-focus btn-sm switch-sidebar-cs-class" data-class="">
                         Restore Default
