--- a/Angular/src/app/components/profile/profile.component.html
+++ b/Angular/src/app/components/profile/profile.component.html
@@ -5,17 +5,15 @@
                 <div class="col-md-10 col-lg-8">
                     <div class="intro">
                         <div class="profile-img">    
-                        <img src="../../../assets/images/profile.jpg" alt="">
-                    </div>
-                    <h2><b>Username</b></h2>
-                    <h4 class="font-yellow">emailExample@gmail.com</h4>
+                        <img src="{{photo}}" alt="">
+                        </div>
+                    <h2><b>{{name}}</b></h2>
+                    <h4 class="font-yellow">{{email}}</h4>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<br>
-<br>
 
 <!--Aca van las publicaciones-->
