--- a/Angular/src/app/shared/sidemenu/sidemenu.component.html
+++ b/Angular/src/app/shared/sidemenu/sidemenu.component.html
@@ -1,5 +1,5 @@
 <!-- SideMenu-->
-<div class="app-sidebar sidebar-shadow">
+<div *ngIf="flag === true" class="app-sidebar sidebar-shadow">
     <div class="app-header__logo">
         <div class="logo-src"></div>
         <div class="header__pane ml-auto">
